test/corpus/Literals2.txt
=================
Decimals/Integers
=================

PROGRAM Main
x := 1_000_000_000; // Underscore separators
x := 1__000; // Repeating underscores
x := 1000__; // Trailing underscores
x := _10_00; // This is not a number, but is a legal variable
x := -1___0___0_; // Leading signs are unary expressions because they can apply to variables
x := + 200000_00000;
END_PROGRAM

---

(source_file
  (program_definition
    ProgramName: (identifier)
    (assignment
      (variable
        Name: (identifier))
      (number))
    (inline_comment)
    (assignment
      (variable
        Name: (identifier))
      (number))
    (inline_comment)
    (assignment
      (variable
        Name: (identifier))
      (number))
    (inline_comment)
    (assignment
      (variable
        Name: (identifier))
      (variable
        Name: (identifier)))
    (inline_comment)
    (assignment
      (variable
        Name: (identifier))
      (unary_expression
        (number)))
    (inline_comment)
    (assignment
      (variable
        Name: (identifier))
      (unary_expression
        (number)))))
